--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KangTV </title>
     <meta name="description" content="KKTV是在线视频搜索平台">
-    <meta name="keywords" content="在线视频,免费视频,视频搜索,电影,电视剧,KKTV">
+    <meta name="keywords" content="在线视频,免费视频,视频搜索,电影,电视剧,KKTV，kang.ink，雲風">
     <meta name="author" content="KKTV">
 
     <!-- Favicon -->
@@ -114,7 +114,7 @@
                     <!-- 添加成人内容切换 -->
                     <div class="flex items-center mb-2">
                         <input type="checkbox" id="customApiIsAdult" class="form-checkbox h-4 w-4 text-pink-500 bg-[#222] border border-[#333]">
-                        <label for="customApiIsAdult" class="ml-2 text-xs text-pink-400">大人资源站</label>
+                        <label for="customApiIsAdult" class="ml-2 text-xs text-pink-400">大人站</label>
                     </div>
                     <div class="flex space-x-2">
                         <button onclick="addCustomApi()" class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-xs">添加</button>
@@ -131,8 +131,8 @@
                 <div class="flex flex-col mb-3 pb-3 border-b border-[#222] relative">
                     <div class="flex items-center justify-between">
                         <div>
-                            <label class="text-sm font-medium text-gray-400">大人内容过滤</label>
-                            <p class="text-xs text-gray-500 mt-1 filter-description">过滤"伦理片"等大人内容</p>
+                            <label class="text-sm font-medium text-gray-400">大人过滤</label>
+                            <p class="text-xs text-gray-500 mt-1 filter-description">过滤</p>
                         </div>
                         <div class="relative inline-block w-12 align-middle select-none">
                             <input type="checkbox" id="yellowFilterToggle" class="opacity-0 absolute w-full h-full cursor-pointer z-10">
