--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>KangTV </title>
     <meta name="description" content="KKTV是在线视频搜索平台">
     <meta name="keywords" content="在线视频,免费视频,视频搜索,电影,电视剧,KKTV，kang.ink，雲風">
-    <meta name="author" content="KKTV">
+    <meta name="author" content="CathyTV">
 
     <!-- Favicon -->
     <link rel="icon" href="image/logo.png">
