--- a/index.html
+++ b/index.html
@@ -304,8 +304,7 @@
                 
                 <div class="text-center md:text-right">
                     <p class="text-gray-500 text-sm max-w-md">
-                        免责声明：本站仅为视频搜索工具，内容均来自第三方。
-友情链接：<a href="http://www.kang.ink">www.kang.ink</a>
+                        免责声明：本站仅为搜索工具，内容来自第三方。友情博客：<a href="http://www.kang.ink">https://kang.ink/</a>
                     </p>
                     <div class="mt-2 flex justify-center md:justify-end space-x-4">
                    
